2009-02-20  Scott James Remnant  <scott@netsplit.com>

	* init/event.c (event_init, event_pending_handle_jobs, event_finished),
	* init/event_operator.c (event_operator_events),
	* init/job.c (job_emit_event, job_name),
	* init/job_class.c (job_class_init, job_class_start)
	(job_class_stop, job_class_restart),
	* init/job_process.c (job_process_run, job_process_error_read)
	(job_process_kill),
	* init/conf.c (conf_init, conf_source_reload_file)
	(conf_reload_path),
	* init/control.c (control_init, control_server_connect)
	(control_bus_open): Set variable outside of NIH_MUST macro.

	* init/event.c (event_pending_handle_jobs): Set variable outside
	of NIH_SHOULD macro.

	* init/Makefile.am ($(com_ubuntu_Upstart_OUTPUTS)): 
	($(com_ubuntu_Upstart_Job_OUTPUTS)): 
	($(com_ubuntu_Upstart_Instance_OUTPUTS)): Update expected path
	of nih-dbus-tool

	* configure.ac: Create nih-dbus-tool Makefile
	* Makefile.am (SUBDIRS): Build in nih-dbus-tool

2009-01-29  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 0.5.2
	* NEWS: Begin 0.5.2

	* NEWS: Copy in news from 0.5.1; that release doesn't appear in
	this ChangeLog since it was made on a separate branch.

	* init/tests/test_blocked.c (test_new),
	* init/tests/test_control.c (test_get_job_by_name)
	(test_get_all_jobs, test_emit_event),
	* init/tests/test_event.c (test_finished),
	* init/tests/test_job.c (test_change_state),
	* init/tests/test_job_class.c (test_get_instance)
	(test_get_instance_by_name, test_get_all_instances): Continue the
	battle with the gcc optimiser which declares variables first used
	inside TEST_ALLOC_FAIL as used uninitialized.

	* init/parse_job.c (parse_exec, parse_script, stanza_instance)
	(stanza_description, stanza_author, stanza_version)
	(stanza_start, stanza_stop, stanza_chroot, stanza_chdir):
	Unreference members when replacing them instead of freeing; not
	strictly necessary but the style is the thing.

	* init/job_process.c (job_process_terminated): Unreference the